<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ViewPagerSettingsActivity">

    <TextView
        android:id="@+id/navigation_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_border">

            <ImageView
                android:layout_width="500dp"
                android:layout_height="270dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_welcome"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:textSize="20dp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_intro"
        android:layout_below="@id/rellay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:gravity="center"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:text="@string/memo"/>

    <TextView
        android:id="@+id/txt_penjelasan"
        android:layout_below="@id/txt_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/penjelasan"/>

    <TextView
        android:id="@+id/halaman"
        android:layout_below="@id/txt_penjelasan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="60dp"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>